# horse_quant_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.bak  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
configs/: backtest_calibrated_balanced_kelly_010.yaml  backtest_calibrated_high_volume_kelly_000.yaml  backtest_calibrated_high_volume_kelly_005.yaml  backtest_calibrated_high_volume_kelly_020.yaml  backtest_calibrated_precision_kelly_030.yaml  backtest_live_bankroll.yaml  calibrate.yaml  data.yaml  features.yaml  ingest.yaml  market.yaml  model_lgbm.yaml  model_lgbm_tiny.yaml  policy.yaml  ratings.yaml  ratings_racedt.yaml  split.yaml
scripts/: run_prod_backtest.py
src/hqp/: __init__.py  cli.py
src/hqp/analysis/: __init__.py  _io.py  ages.py  compare_market.py  explore.py  model.py  ratings.py  ratings_inspect.py
src/hqp/checks/: __init__.py  guards.py
src/hqp/common/: checks.py  contracts.py  logging.py  schema.py
src/hqp/eval/: __init__.py  backtest.py  backtest_runner.py  backtest_sweep.py  calibration.py  calibrators.py  edge.py  kelly.py  market.py  (+1 more)
tests/: conftest.py  test_calibration_and_metrics.py  test_checks_guards.py  test_configs.py  test_contracts_schema.py  test_dataset_loading.py  test_imports.py  test_market_attach.py  test_market_normalize.py  test_market_parsing.py  test_metrics_extras.py  test_model_probsum.py  test_model_sum.py  test_plots_ages.py  test_plots_calibration.py  test_plots_eda.py  test_plots_market.py  test_ratings_snapshots.py  test_splits_time.py  test_training_baselines.py
tests/cli/: test_cli_help.py  test_cli_market_smoke.py  test_cli_train_smoke.py
(+27 files in other folders)
